--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
+baseURL = "https://stephenbrown.uk/"
+languageCode = "en-ch"
 title = "brown.bg"
 theme = "hugo-vitae"
